fixed message text overflow removed redundant title

--- a/ui/app/components/app/signature-request/signature-request-message/index.scss
+++ b/ui/app/components/app/signature-request/signature-request-message/index.scss
@@ -55,8 +55,8 @@
     &-value {
       color: black;
       margin-left: 0.5rem;
-      text-overflow: ellipsis;
-      white-space: nowrap;
+      overflow-wrap: break-word;
+      white-space: pre-line;
       overflow: hidden;
     }
   }
